# TCP-Exchange

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp
client/interface/: CMakeLists.txt  interface.cpp  interface.h
client/market_data/: CMakeLists.txt
client/network/: CMakeLists.txt  networkClient.cpp  networkClient.h
database/: CMakeLists.txt
logs/: CMakeLists.txt  logger.cpp
server/: CMakeLists.txt  server.cpp
server/data_handler/: CMakeLists.txt
server/network/: CMakeLists.txt  networkServer.cpp  networkServer.h
server/trading_engine/: CMakeLists.txt
server/user_management/: CMakeLists.txt  UserWallet.cpp  UserWallet.h
shared/: CMakeLists.txt
shared/models/: CMakeLists.txt  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h
shared/protocol/: CMakeLists.txt  MessageFormat.cpp  MessageFormat.h  MessageType.cpp  MessageType.h
shared/util/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  JsonReader.cpp  JsonReader.h
